--- a/inline.html
+++ b/inline.html
@@ -21,14 +21,15 @@
                    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
             The life of a programmer</h1>
         <div>
-            <p style="text-align: center;
-                      margin: 25px;
-                      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                      background-color: #303446;
-                      color: #a5adce;
-                      padding: 10px;
-                      border-radius: 5px;
-                       font-size: large;">
+            <p style=" text-align: center;
+            background-color:#303446 ;  
+            color: #c6d0f5;
+            padding: 28px;
+            border-radius: 5px;
+            margin-left: 100px;
+            margin-right: 100px;
+            font-size: 50px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                 As a programmer, it is a must to persevere every day <br>
                 you move through countless of files to keep issues at bay <br>
                 you organize your code to make it more beautiful <br>
@@ -42,13 +43,14 @@
             </p>
         </div>
         <p
-            style="   background-color: #303446;
-        color: #dbdde4;
-        text-align: center;
-        padding: 10px;
-        margin: 25px;
-        border-radius: 5px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+            style=" background-color: #303446;
+            color: #dbdde4;
+            text-align: center;
+            padding: 10px;
+            margin-left: 100px;
+            margin-right: 100px;
+            border-radius: 5px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   ">
             Inline CSS version</p>
     </div>
 </body>
