--- a/internal-css.html
+++ b/internal-css.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+body{
+    background-color: #232634;
+}
+
+.header {
+    text-align: center;
+    background-color:#303446 ;
+    color: #c6d0f5;
+    padding: 28px;
+    border-radius: 5px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 50px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.body-text{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #303446;
+    color: #eaecf7;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 5px;
+    font-size: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.cite-text{
+    background-color: #303446;
+    color: #dbdde4;
+    text-align: center;
+    padding: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+    </style>
 </head>
+
 <body>
-    
+    <div>
+        <h1 class="header"> The life of a programmer</h1>
+        <div>
+            <p class="body-text"> As a programmer, it is a must to persevere every day <br>
+                you move through countless of files to keep issues at bay <br>
+                you organize your code to make it more beautiful <br>
+                but in the process you can suddenly introduce bugs so be careful <br>
+                <br>
+                You get into countless of sleepless nights, trying to work and improve <br>
+                but in the end, the effort is fruitful as you wake up the next day to your code being approved <br>
+                but your job doesnt end here, no, this is only the start of your journey <br>
+                because you'll be here for the rest of your life, updating your code, breaking it, and fixing it
+                countless of times in agony. <br>
+            </p>
+        </div>
+        <p class="cite-text">Internal CSS version</p>
+    </div>
 </body>
+
 </html>
